# polysquare-ci-scripts

./: .simplecov  .travis.yml  DICTIONARY  PACKAGES.Ubuntu.precise  PACKAGES.Windows.8.1  README.md  appveyor.yml  container-setup.py  requirements.txt  setup.py
ciscripts/: __init__.py  bootstrap.py  clean.py  parse_setup.py  python_util.py  ruby_util.py  util.py
ciscripts/bash/: osx-python.sh
ciscripts/check/: __init__.py
ciscripts/check/bii/: __init__.py  check.py
ciscripts/check/cmake/: __init__.py  check.py
ciscripts/coverage/: __init__.py
ciscripts/deploy/: __init__.py
ciscripts/setup/: __init__.py
sample/bii/: CMakeLists.txt  biicode.conf
sample/cmake/: CMakeLists.txt  included.cmake
sample/cmake/src/: main.cpp
sample/conan/: CMakeLists.txt  conanfile.py
sample/psqcppconan/: CMakeLists.txt  conanfile.py
sample/psqcppconan/src/: main.cpp
sample/python/: setup.py
sample/shell/: example.sh
test/: __init__.py  test_bii.py  test_bootstrap.py  test_cmake.py  test_conan.py  test_project.py  test_python_util.py  test_util.py  testutil.py  utf8_print_cmd.txt
tests/: polysquare_ci_scripts_helper.bash  polysquare_container_copy_helper.bash  polysquare_container_generate_helper.bash  polysquare_fresh_container_helper.bash  polysquare_project_copy_helper.bash  polysquare_project_helper.bash  polysquare_python_helper.bash  polysquare_shell_helper.bash  project-check.bats  project-setup.bats  python-check.bats  python-setup.bats  setup-haskell.bats  setup-node.bats  setup-python.bats  setup-ruby.bats  shell-check.bats  shell-setup.bats  util-fetch.bats  util-python.bats  util.bats
travis/: bootstrap.sh  cmake-coverage.sh  cmake-install.sh  cmake-lint.sh  cmake-test-in-container.sh  cmake-tests.sh  distro-container.sh  haskell-util.sh  prepare-lang-cache.sh  prepare-local-language-caching.sh  project-lint.sh  python-coverage.sh  python-install.sh  python-lint.sh  python-prepare-doc-deploy.sh  python-setup-with-doc.sh  python-test-module.sh  python-tests.sh  python-util.sh  setup-lang.sh  setup-local-languages.sh  shell-lint.sh  util.sh
(+67 files in other folders)
